# llm-mini-crm

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
src/db/queries/: 001_create_clients.sql
src/llm-mini-crm/db/queries/: 001_insert_clients.sql
src/llm_mini_crm/agent/: config.py  llm_client.py  prompts.py  run_agent.py  schemas.py  sql_agent.py  sql_safety.py
src/llm_mini_crm/agent/tools/: db_tool.py
src/llm_mini_crm/db/: init_clients_table.py
src/llm_mini_crm/db/queries/: 002_create_clients.sql  003_create_index.sql
src/llm_mini_crm/db/scripts/: connection.py  executor.py
tests/: test_run_agent.py  test_sql_agent.py  test_sql_safety.py
