[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-mini-crm"
version = "0.1.0"
description = "Lightweight demo of an LLM-powered SQL agent for a mini CRM dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "sqlalchemy>=2.0",
  "asyncpg>=0.28",
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "numpy>=1.24",
  "httpx>=0.27",
  "pytest>=8.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_mini_crm*"]

[tool.setuptools.package-data]
llm_mini_crm = ["db/queries/*.sql"]
